[gd_scene load_steps=22 format=3 uid="uid://cxfftwf4j4alt"]

[ext_resource type="Script" path="res://player/Player.gd" id="1_ynuvx"]
[ext_resource type="Texture2D" uid="uid://brjw8q8ebktcq" path="res://assets/sprites/platformer.png" id="2_18n6b"]
[ext_resource type="Texture2D" uid="uid://dn4d7e417wcvb" path="res://assets/gui/EButtonPressed.png" id="2_kkm6y"]
[ext_resource type="Texture2D" uid="uid://b8llp0xyxmum0" path="res://assets/gui/EButton.png" id="3_tatsy"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_6xjuc"]
radius = 25.0
height = 92.0

[sub_resource type="Animation" id="35"]
resource_name = "Dead"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [66, 67, 68, 69]
}

[sub_resource type="Animation" id="21"]
resource_name = "Double_Jump"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22]
}

[sub_resource type="Animation" id="22"]
resource_name = "Fall"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [23, 24]
}

[sub_resource type="Animation" id="30"]
resource_name = "Hang"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [30, 31, 32, 33]
}

[sub_resource type="Animation" id="23"]
resource_name = "Idle"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="24"]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 17, 18]
}

[sub_resource type="Animation" id="31"]
resource_name = "Long_Melee_Attack"
length = 1.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 52, 53, 54, 55, 56, 57, 58]
}

[sub_resource type="Animation" id="25"]
resource_name = "Melee_Attack"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46, 47]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_enable_hurtbox"
}]
}

[sub_resource type="Animation" id="33"]
resource_name = "Ranged_Attack"
length = 0.08
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [75, 76]
}

[sub_resource type="Animation" id="27"]
resource_name = "Running"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="28"]
resource_name = "Slide"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [25, 26, 27, 28, 29]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aar4j"]
_data = {
"Dead": SubResource("35"),
"Double_Jump": SubResource("21"),
"Fall": SubResource("22"),
"Hang": SubResource("30"),
"Idle": SubResource("23"),
"Jump": SubResource("24"),
"Long_Melee_Attack": SubResource("31"),
"Melee_Attack": SubResource("25"),
"Ranged_Attack": SubResource("33"),
"Running": SubResource("27"),
"Slide": SubResource("28")
}

[sub_resource type="Animation" id="Animation_8go1p"]
resource_name = "KeyPrompt"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionButton:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_tatsy"), ExtResource("2_kkm6y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 10.9283),
"update": 0,
"values": [Vector2(-2, -173), Vector2(-2, -182)]
}

[sub_resource type="Animation" id="Animation_rluow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActionButton:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_kkm6y")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ActionButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2, -127)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0pwal"]
_data = {
"KeyPrompt": SubResource("Animation_8go1p"),
"RESET": SubResource("Animation_rluow")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ah4qc"]
size = Vector2(72, 120)

[node name="Player" type="CharacterBody2D"]
z_index = 10
script = ExtResource("1_ynuvx")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(-1, -56)
scale = Vector2(0.1, 0.1)
texture = ExtResource("2_18n6b")
hframes = 8
vframes = 10
frame = 45

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -45)
shape = SubResource("CapsuleShape2D_6xjuc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
libraries = {
"": SubResource("AnimationLibrary_aar4j")
}

[node name="GridMarker" type="Marker2D" parent="."]
position = Vector2(64, -32)

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="ActionButton" type="Sprite2D" parent="."]
visible = false
position = Vector2(-2, -127)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_kkm6y")

[node name="Label" type="Label" parent="ActionButton"]
offset_left = -748.0
offset_top = 78.0
offset_right = -246.0
offset_bottom = 98.0
scale = Vector2(3, 3)
text = "ENTER SHOP"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="ButtonAnimation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0pwal")
}

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(36, -52)
shape = SubResource("RectangleShape2D_ah4qc")
disabled = true
debug_color = Color(0.92549, 0.247059, 0.301961, 0.419608)

[node name="HurtboxTimer" type="Timer" parent="."]
wait_time = 0.14

[connection signal="timeout" from="CoyoteTimer" to="." method="_on_coyote_timer_timeout"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="timeout" from="HurtboxTimer" to="." method="_disable_hurtbox"]
